临时修改，之后不直接修改前端，只在后端修改

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
 	<div class="main fly-user-main layui-clear">
 		<ul class="layui-nav layui-nav-tree layui-inline" lay-filter="user">
 			<li class="layui-nav-item layui-this" ><a href="index.html"> <i
-					class="layui-icon">&#xe609;</i> 首页 </a></li>
+					class="layui-icon">&#xe609;</i> 分类管理 </a></li>
 					
 								<li class="layui-nav-item "><a href="role.html" target="right"> <i
-					class="layui-icon">&#xe612;</i> 角色管理</a></li>
+					class="layui-icon">&#xe612;</i> 新闻中心</a></li>
 			<li class="layui-nav-item "><a href="user.html" target="right"> <i
-					class="layui-icon">&#xe612;</i> 用户管理</a></li>
+					class="layui-icon">&#xe612;</i> 商品管理</a></li>
 						<li class="layui-nav-item"><a href="newsType.html" target="right"> <i
-					class="layui-icon">&#xe611;</i> 新闻分类 </a></li>
+					class="layui-icon">&#xe611;</i> 出价历史 </a></li>
 			<li class="layui-nav-item "><a href="news.html" target="right"> <i
-					class="layui-icon">&#xe611;</i> 新闻管理</a></li>
+					class="layui-icon">&#xe611;</i> 商品评论</a></li>
 			<li class="layui-nav-item  "><a href="javascript:void(0)" onclick="updatePwd('修改密码',2)"> <i
-					class="layui-icon">&#xe620;</i> 修改密码 </a></li>
+					class="layui-icon">&#xe620;</i> 交易历史 </a></li>
 						<li class="layui-nav-item "><a href="charts-1.html" target="right"> <i
-					class="layui-icon">&#xe61a;</i> 报表统计 </a></li>
+					class="layui-icon">&#xe61a;</i> 用户管理 </a></li>
 				<li class="layui-nav-item "><a href="404.html" target="right"> <i
 					class="layui-icon">&#xe61a;</i> 404错误页面 </a></li>
 		</ul>
